--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,15 @@ body {
 }
 
 .heading-primary {
+  backface-visibility: hidden;
   color: #fff;
   text-transform: uppercase;
 }
 
 .heading-primary-main {
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
   display: block;
   font-size: 60px;
   font-weight: 400;
@@ -65,8 +69,41 @@ body {
 }
 
 .heading-primary-sub {
+  animation: moveInRight 1s ease-out;
   display: block;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(15px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-15px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
