--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,14 @@ body {
   position: absolute;
   left: 50%;
   top: 40%;
+  text-align: center;
   transform: translate(-50%, -50%);
 }
 
 .heading-primary {
   backface-visibility: hidden;
   color: #fff;
+  margin-bottom: 60px;
   text-transform: uppercase;
 }
 
@@ -74,6 +76,59 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+}
+
+.btn:link,
+.btn:visited {
+  border-radius: 100px;
+  display: inline-block;
+  padding: 15px 40px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all .2s;
+}
+
+.btn:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+  transform: translateY(-3px);
+}
+
+.btn:active {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  transform: translateY(-1px);
+}
+
+.btn::after {
+  border-radius: 100px;
+  display: inline-block;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  transition: all .4s;
+  width: 100%;
+  z-index: -1;
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
+}
+
+.btn:hover::after {
+  opacity: 0;
+  transform: scaleX(1.4) scaleY(1.6);
+}
+
+.btn-white::after {
+  background-color: #fff;
 }
 
 @keyframes moveInLeft {
@@ -100,6 +155,18 @@ body {
 
   80% {
     transform: translateX(-15px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
   }
 
   100% {
