--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,26 @@ Dark green: #28b485
 
 */
 
-*{
-  box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
+  box-sizing: border-box;
   color: #777;
   font-family: "Lato", sans-serif;
-  font-size: 16px;
+  /* font-size: 16px; */
   font-weight: 400;
   line-height: 1.7;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .header {
@@ -35,17 +42,17 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
-  left: 40px;
-  top: 40px;
+  left: 4rem;
+  top: 4rem;
 }
 
-.logo {
-  height: 35px;
+.header__logo {
+  height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   left: 50%;
   top: 40%;
@@ -56,33 +63,34 @@ body {
 .heading-primary {
   backface-visibility: hidden;
   color: #fff;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
   text-transform: uppercase;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   animation: moveInRight 1s ease-out;
   display: block;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
 }
 
 .btn:link,
 .btn:visited {
-  border-radius: 100px;
+  border-radius: 10rem;
   display: inline-block;
-  padding: 15px 40px;
+  font-size: 1.6rem;
+  padding: 1.5rem 4rem;
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
@@ -90,17 +98,17 @@ body {
 }
 
 .btn:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
-  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+  transform: translateY(-.3rem);
 }
 
 .btn:active {
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
   transform: translateY(-1px);
 }
 
 .btn::after {
-  border-radius: 100px;
+  border-radius: 10rem;
   display: inline-block;
   content: "";
   height: 100%;
@@ -112,12 +120,12 @@ body {
   z-index: -1;
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards;
 }
@@ -127,18 +135,18 @@ body {
   transform: scaleX(1.4) scaleY(1.6);
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(15px);
+    transform: translateX(1.5rem);
   }
 
   100% {
@@ -150,11 +158,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-15px);
+    transform: translateX(-1.5rem);
   }
 
   100% {
@@ -166,7 +174,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
