--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,12 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
 *,
 *::after,
 *::before {
   box-sizing: inherit;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
   box-sizing: border-box;
@@ -26,67 +15,49 @@ body {
   /* font-size: 16px; */
   font-weight: 400;
   line-height: 1.7;
-  padding: 3rem;
-}
+  padding: 3rem; }
 
 .header {
-  background-image: linear-gradient(
-    to right bottom,
-  rgba(126, 213, 111, 0.8),
-  rgba(40, 180, 131, 0.8)),
-  url(../img/hero.jpg);
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-position: top;
   background-size: cover;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   height: 95vh;
-  position: relative;
-}
-
-.header__logo-box {
-  position: absolute;
-  left: 4rem;
-  top: 4rem;
-}
-
-.header__logo {
-  height: 3.5rem;
-}
-
-.header__text-box {
-  position: absolute;
-  left: 50%;
-  top: 40%;
-  text-align: center;
-  transform: translate(-50%, -50%);
-}
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    left: 4rem;
+    top: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    text-align: center;
+    transform: translate(-50%, -50%); }
 
 .heading-primary {
   backface-visibility: hidden;
   color: #fff;
   margin-bottom: 6rem;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
+  .heading-primary--main {
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem; }
+  .heading-primary--sub {
+    animation: moveInRight 1s ease-out;
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem; }
 
-.heading-primary--main {
-  animation-name: moveInLeft;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-}
-
-.heading-primary--sub {
-  animation: moveInRight 1s ease-out;
-  display: block;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1.75rem;
-}
-
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   border-radius: 10rem;
   display: inline-block;
   font-size: 1.6rem;
@@ -94,18 +65,18 @@ body {
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
-  transition: all .2s;
-}
+  transition: all .2s; }
 
 .btn:hover {
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
-  transform: translateY(-.3rem);
-}
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.3rem); }
+  .btn:hover::after {
+    opacity: 0;
+    transform: scaleX(1.4) scaleY(1.6); }
 
 .btn:active {
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
-  transform: translateY(-1px);
-}
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-1px); }
 
 .btn::after {
   border-radius: 10rem;
@@ -117,68 +88,42 @@ body {
   top: 0;
   transition: all .4s;
   width: 100%;
-  z-index: -1;
-}
+  z-index: -1; }
 
 .btn--white {
   background-color: #fff;
-  color: #777;
-}
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
 
 .btn--animated {
   animation: moveInBottom .5s ease-out .75s;
-  animation-fill-mode: backwards;
-}
-
-.btn:hover::after {
-  opacity: 0;
-  transform: scaleX(1.4) scaleY(1.6);
-}
-
-.btn--white::after {
-  background-color: #fff;
-}
+  animation-fill-mode: backwards; }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-10rem);
-  }
-
+    transform: translateX(-10rem); }
   80% {
-    transform: translateX(1.5rem);
-  }
-
+    transform: translateX(1.5rem); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem);
-  }
-
+    transform: translateX(10rem); }
   80% {
-    transform: translateX(-1.5rem);
-  }
-
+    transform: translateX(-1.5rem); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(3rem);
-  }
-
+    transform: translateY(3rem); }
   100% {
     opacity: 1;
-    transform: translateX(0);
-  }
-}
+    transform: translateX(0); } }
